Remove hard coded magic numbers for header and footer height, fix the logic and now the scrollbar only shows up when it should, commented out jqtransform css

--- a/assets/sass/common/_screen.sass
+++ b/assets/sass/common/_screen.sass
@@ -1819,10 +1819,10 @@ body
         left: -1px
         .select-def
           width: 138px
-        .jqTransformSelectWrapper a.jqTransformSelectOpen
-          background: url(../images/forms/angle-select-right.png) no-repeat 0 0
-        .whiteSelectBg a.jqTransformSelectOpen
-          background: url(../images/forms/angle-select-right.png) no-repeat 0 -35px
+        //.jqTransformSelectWrapper a.jqTransformSelectOpen
+        //  background: url(../images/forms/angle-select-right.png) no-repeat 0 0
+        //.whiteSelectBg a.jqTransformSelectOpen
+        //  background: url(../images/forms/angle-select-right.png) no-repeat 0 -35px
       .search-btn
         background-image: url(../images/icon-sprites.png)
         background-repeat: no-repeat
@@ -2850,11 +2850,11 @@ body
             color: #646666
       .add-service-forms .select-def
         width: 100%
-  .add-service-forms .selectsContainer
-    .jqTransformSelectWrapper a.jqTransformSelectOpen
-      background: #edf0f0 url(../images/forms/select-right.png) no-repeat 0 0
-    .whiteSelectBg a.jqTransformSelectOpen
-      background: #edf0f0 url(../images/forms/select-right.png) no-repeat 0 -35px
+  //.add-service-forms .selectsContainer
+  //  .jqTransformSelectWrapper a.jqTransformSelectOpen
+  //    background: #edf0f0 url(../images/forms/select-right.png) no-repeat 0 0
+  //  .whiteSelectBg a.jqTransformSelectOpen
+  //    background: #edf0f0 url(../images/forms/select-right.png) no-repeat 0 -35px
   .right-bar
     /* .right-bar .build-custom-box
     /* .service-detail-container .right-bar .banner-vertical
@@ -2878,8 +2878,8 @@ body
         font-size: 12px
         width: 100%
         line-height: 30px
-      .jqTransformSelectWrapper li
-        padding-bottom: 0
+      //.jqTransformSelectWrapper li
+      //  padding-bottom: 0
     .build-custom-box
       background: #e6ebeb
       padding: 8px 22px
@@ -4097,11 +4097,11 @@ body
   .table-container .table-data
     .select-def
       width: 233px
-    .selectsContainer
-      .jqTransformSelectWrapper a.jqTransformSelectOpen
-        background: #eff5fd url(../images/forms/select-right.png) no-repeat 0 0
-      .whiteSelectBg a.jqTransformSelectOpen
-        background: #eff5fd url(../images/forms/select-right.png) no-repeat 0 -35px
+    //.selectsContainer
+    //  .jqTransformSelectWrapper a.jqTransformSelectOpen
+    //    background: #eff5fd url(../images/forms/select-right.png) no-repeat 0 0
+    //  .whiteSelectBg a.jqTransformSelectOpen
+    //    background: #eff5fd url(../images/forms/select-right.png) no-repeat 0 -35px
   .font12
     font-size: 12px
   .calendar
